--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,8 @@
   
     <p style="font-size: 12px;"><strong>Model Training:</strong> The models were trained on a dataset of about <strong>2000 questions</strong>. The final prediction was decided on by accounting for the predictions of each model and iteratively assigning them weights, which were implemented in the final tool.</p>
   </div>
- 
+  <form action="/upload" method="get">
+    <button type="submit" class="mbutton">Upload PDF</button>
+  </form>
 </body>
 </html>
